--- a/app/src/main/res/drawable/circular_edit_text.xml
+++ b/app/src/main/res/drawable/circular_edit_text.xml
@@ -3,18 +3,12 @@
     android:shape="rectangle">
     <stroke
         android:width="2dp"
-        android:color="@color/white"
-        />
-    <corners
-        android:radius="10dp"
-        />
+        android:color="@color/white" />
+    <corners android:radius="10dp" />
     <padding
+        android:bottom="5dp"
         android:left="10dp"
         android:right="10dp"
-        android:bottom="5dp"
-        android:top="5dp"
-        />
-    <solid
-        android:color="#FFFFFF"
-        />
+        android:top="5dp" />
+    <solid android:color="#FFFFFF" />
 </shape>
