--- a/app/src/main/res/drawable/selected_dot.xml
+++ b/app/src/main/res/drawable/selected_dot.xml
@@ -1,20 +1,28 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:innerRadius="0dp"
-    android:shape="ring"
-    android:thickness="8dp"
-    android:useLevel="false">
-    <solid android:color="@android:color/holo_blue_dark" />
+<?xml version="1.0" encoding="utf-8"?>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android"
+    android:padding="3dp">
+    <item>
+        <shape xmlns:android="http://schemas.android.com/apk/res/android"
+            android:shape="ring"
+            android:useLevel="false">
+            <solid android:color="@color/gray" />
+            <size
+                android:width="@dimen/t_padding"
+                android:height="@dimen/t_padding" />
+        </shape>
+    </item>
+    <item
+        android:bottom="@dimen/i_padding"
+        android:left="@dimen/i_padding"
+        android:right="@dimen/i_padding"
+        android:top="@dimen/i_padding">
+        <shape
+            android:innerRadius="0dp"
+            android:shape="ring"
+            android:thickness="6dp"
+            android:useLevel="false">
 
-    <stroke
-        android:width="1dp"
-        android:color="@android:color/darker_gray" />
-
-    <padding
-        android:bottom="1dp"
-        android:left="1dp"
-        android:right="1dp"
-        android:top="1dp" />
-
-    <corners android:radius="100dp" />
-</shape>
+            <solid android:color="@color/gray" />
+        </shape>
+    </item>
+</layer-list>
