--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,8 +34,8 @@
 
                 <androidx.viewpager2.widget.ViewPager2
                     android:id="@+id/view_pager"
-                    android:layout_width="320dp"
-                    android:layout_height="260dp"
+                    android:layout_width="@dimen/_320dp"
+                    android:layout_height="@dimen/_260dp"
                     android:orientation="horizontal"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
@@ -55,23 +55,38 @@
             <LinearLayout
                 android:id="@+id/searchLayout"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="@dimen/_80dp"
                 android:background="@color/gray"
+                android:padding="@dimen/_10dp"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/indicatorLayout">
 
-                <androidx.appcompat.widget.AppCompatEditText
-                    android:id="@+id/searchEditText"
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="10dp"
+                    android:layout_height="match_parent"
                     android:background="@drawable/circular_edit_text"
-                    android:drawableStart="@android:drawable/ic_menu_search"
-                    android:gravity="center"
-                    android:hint="Search"
-                    android:padding="10dp"
-                    android:textAlignment="center" />
+                    android:gravity="center">
+
+                    <ImageView
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:src="@android:drawable/ic_search_category_default" />
+
+                    <androidx.appcompat.widget.AppCompatEditText
+                        android:id="@+id/searchEditText"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/circular_edit_text"
+                        android:gravity="center"
+                        android:hint="@string/search"
+                        android:padding="@dimen/_10dp"
+                        android:textAlignment="center"
+                        android:textColorHint="@color/gray" />
+
+                </LinearLayout>
+
+
             </LinearLayout>
 
 
