--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,8 @@
     <dimen name="text_padding">16dp</dimen>
     <dimen name="i_padding">7dp</dimen>
     <dimen name="t_padding">25dp</dimen>
+    <dimen name="_10dp">10dp</dimen>
+    <dimen name="_80dp">80dp</dimen>
+    <dimen name="_320dp">320dp</dimen>
+    <dimen name="_260dp">260dp</dimen>
 </resources>
